// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing the generation of new type generateTypeFile(Boolean) 1`] = `
"/* tslint:disable */
/**
 * This file was automatically generated by json-schema-to-typescript.
 * DO NOT MODIFY IT BY HAND. Instead, modify the source JSONSchema file,
 * and run json-schema-to-typescript to regenerate this file.
 */

export interface Boolean {}
"
`;

exports[`Testing the generation of new type generateTypeFile(CreatedAt) 1`] = `
"/* tslint:disable */
/**
 * This file was automatically generated by json-schema-to-typescript.
 * DO NOT MODIFY IT BY HAND. Instead, modify the source JSONSchema file,
 * and run json-schema-to-typescript to regenerate this file.
 */

export interface CreatedAt {}
"
`;

exports[`Testing the generation of new type generateTypeFile(DateTime) 1`] = `
"/* tslint:disable */
/**
 * This file was automatically generated by json-schema-to-typescript.
 * DO NOT MODIFY IT BY HAND. Instead, modify the source JSONSchema file,
 * and run json-schema-to-typescript to regenerate this file.
 */

export interface DateTime {
  timeZone: \\"localTime\\" | \\"serverTime\\";
  dateOnly: boolean;
}
"
`;

exports[`Testing the generation of new type generateTypeFile(DecimalNumber) 1`] = `
"/* tslint:disable */
/**
 * This file was automatically generated by json-schema-to-typescript.
 * DO NOT MODIFY IT BY HAND. Instead, modify the source JSONSchema file,
 * and run json-schema-to-typescript to regenerate this file.
 */

export interface DecimalNumber {
  /**
   * The minimum value
   */
  minimumValue: number;
  /**
   * The maximum value
   */
  maximumValue: number;
  /**
   * The number of digits to the right of the decimal point
   */
  precision: number;
}
"
`;

exports[`Testing the generation of new type generateTypeFile(Email) 1`] = `
"/* tslint:disable */
/**
 * This file was automatically generated by json-schema-to-typescript.
 * DO NOT MODIFY IT BY HAND. Instead, modify the source JSONSchema file,
 * and run json-schema-to-typescript to regenerate this file.
 */

export interface Email {}
"
`;

exports[`Testing the generation of new type generateTypeFile(GeographicLocation) 1`] = `
"/* tslint:disable */
/**
 * This file was automatically generated by json-schema-to-typescript.
 * DO NOT MODIFY IT BY HAND. Instead, modify the source JSONSchema file,
 * and run json-schema-to-typescript to regenerate this file.
 */

export interface GeographicAddress {}
"
`;

exports[`Testing the generation of new type generateTypeFile(Id) 1`] = `
"/* tslint:disable */
/**
 * This file was automatically generated by json-schema-to-typescript.
 * DO NOT MODIFY IT BY HAND. Instead, modify the source JSONSchema file,
 * and run json-schema-to-typescript to regenerate this file.
 */

export interface Id {}
"
`;

exports[`Testing the generation of new type generateTypeFile(Json) 1`] = `
"/* tslint:disable */
/**
 * This file was automatically generated by json-schema-to-typescript.
 * DO NOT MODIFY IT BY HAND. Instead, modify the source JSONSchema file,
 * and run json-schema-to-typescript to regenerate this file.
 */

export interface Json {}
"
`;

exports[`Testing the generation of new type generateTypeFile(Lookup) 1`] = `
"/* tslint:disable */
/**
 * This file was automatically generated by json-schema-to-typescript.
 * DO NOT MODIFY IT BY HAND. Instead, modify the source JSONSchema file,
 * and run json-schema-to-typescript to regenerate this file.
 */

export type RelatedEntity = string;
export type RelatedField = string;

export interface Lookup {
  relatedEntityId: RelatedEntity;
  allowMultipleSelection: boolean;
  relatedFieldId: RelatedField;
}
"
`;

exports[`Testing the generation of new type generateTypeFile(MultiLineText) 1`] = `
"/* tslint:disable */
/**
 * This file was automatically generated by json-schema-to-typescript.
 * DO NOT MODIFY IT BY HAND. Instead, modify the source JSONSchema file,
 * and run json-schema-to-typescript to regenerate this file.
 */

export interface MultiLineText {
  /**
   * The maximum length of the field
   */
  maxLength: number;
}
"
`;

exports[`Testing the generation of new type generateTypeFile(MultiSelectOptionSet) 1`] = `
"/* tslint:disable */
/**
 * This file was automatically generated by json-schema-to-typescript.
 * DO NOT MODIFY IT BY HAND. Instead, modify the source JSONSchema file,
 * and run json-schema-to-typescript to regenerate this file.
 */

export interface MultiSelectOptionSet {
  options: [
    {
      label: string;
      value: string;
    },
    ...{
      label: string;
      value: string;
    }[]
  ];
}
"
`;

exports[`Testing the generation of new type generateTypeFile(OptionSet) 1`] = `
"/* tslint:disable */
/**
 * This file was automatically generated by json-schema-to-typescript.
 * DO NOT MODIFY IT BY HAND. Instead, modify the source JSONSchema file,
 * and run json-schema-to-typescript to regenerate this file.
 */

export interface OptionSet {
  options: [
    {
      label: string;
      value: string;
    },
    ...{
      label: string;
      value: string;
    }[]
  ];
}
"
`;

exports[`Testing the generation of new type generateTypeFile(Password) 1`] = `
"/* tslint:disable */
/**
 * This file was automatically generated by json-schema-to-typescript.
 * DO NOT MODIFY IT BY HAND. Instead, modify the source JSONSchema file,
 * and run json-schema-to-typescript to regenerate this file.
 */

export interface Password {}
"
`;

exports[`Testing the generation of new type generateTypeFile(Roles) 1`] = `
"/* tslint:disable */
/**
 * This file was automatically generated by json-schema-to-typescript.
 * DO NOT MODIFY IT BY HAND. Instead, modify the source JSONSchema file,
 * and run json-schema-to-typescript to regenerate this file.
 */

export interface Roles {}
"
`;

exports[`Testing the generation of new type generateTypeFile(SingleLineText) 1`] = `
"/* tslint:disable */
/**
 * This file was automatically generated by json-schema-to-typescript.
 * DO NOT MODIFY IT BY HAND. Instead, modify the source JSONSchema file,
 * and run json-schema-to-typescript to regenerate this file.
 */

export interface SingleLineText {
  /**
   * The maximum length of the field
   */
  maxLength: number;
}
"
`;

exports[`Testing the generation of new type generateTypeFile(UpdatedAt) 1`] = `
"/* tslint:disable */
/**
 * This file was automatically generated by json-schema-to-typescript.
 * DO NOT MODIFY IT BY HAND. Instead, modify the source JSONSchema file,
 * and run json-schema-to-typescript to regenerate this file.
 */

export interface UpdatedAt {}
"
`;

exports[`Testing the generation of new type generateTypeFile(Username) 1`] = `
"/* tslint:disable */
/**
 * This file was automatically generated by json-schema-to-typescript.
 * DO NOT MODIFY IT BY HAND. Instead, modify the source JSONSchema file,
 * and run json-schema-to-typescript to regenerate this file.
 */

export interface Username {}
"
`;

exports[`Testing the generation of new type generateTypeFile(WholeNumber) 1`] = `
"/* tslint:disable */
/**
 * This file was automatically generated by json-schema-to-typescript.
 * DO NOT MODIFY IT BY HAND. Instead, modify the source JSONSchema file,
 * and run json-schema-to-typescript to regenerate this file.
 */

export interface WholeNumber {
  /**
   * The minimum value
   */
  minimumValue: number;
  /**
   * The maximum value
   */
  maximumValue: number;
}
"
`;
